Implemented the code to display two languages for the login page

--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -1,1 +1,7 @@
-button.login.name = Login;
+button.login.name = Login
+forgot_password = Forgot your password?
+not_registered = Not registered?
+sign_up = Sign up
+remember_me = Remember me
+username = Username
+password = Password
