--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -5,3 +5,5 @@ sign_up = Sign up
 remember_me = Remember me
 username = Username
 password = Password
+error_title = ERROR
+alert_content = Incorrect username/password
