--- a/src/main/resources/translations/content_ks.properties
+++ b/src/main/resources/translations/content_ks.properties
@@ -5,3 +5,5 @@ sign_up = Regjistrohu
 remember_me = Mbaj mend
 username = Përdoruesi
 password = Fjalëkalimi
+error_title = GABIM
+error_content = Përdoruesi/Fjalëkalimi i gabuar
