Implemented the two language function in sign up

--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -7,3 +7,6 @@ username = Username
 password = Password
 error_title = ERROR
 alert_content = Incorrect username/password
+name_label = First name
+lastname_label = Last name
+alreadyHave = Already have an account?
