--- a/src/main/resources/translations/content_ks.properties
+++ b/src/main/resources/translations/content_ks.properties
@@ -7,3 +7,6 @@ username = Përdoruesi
 password = Fjalëkalimi
 error_title = GABIM
 error_content = Përdoruesi/Fjalëkalimi i gabuar
+name_label = Emri
+lastname_label = Mbiemri
+alreadyHave = Jeni të regjistruar?
