Added a chart and the function to show the number of emplyed based on the table

--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -1,3 +1,4 @@
+//login
 button.login.name = Login
 forgot_password = Forgot your password?
 not_registered = Not registered?
@@ -7,6 +8,8 @@ username = Username
 password = Password
 error_title = ERROR
 alert_content = Incorrect username/password
+//signup
 name_label = First name
 lastname_label = Last name
 alreadyHave = Already have an account?
+
