Made the two language function in the dashboard

--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -8,8 +8,19 @@ username = Username
 password = Password
 error_title = ERROR
 alert_content = Incorrect username/password
+
 //signup
 name_label = First name
 lastname_label = Last name
 alreadyHave = Already have an account?
+
+//dashboard
+totalEmployed = Total employed:
+totalMaleEmployed = Total male employed:
+totalFemaleEmployed = Total Female Employed:
+welcomeLabel = Welcome
+dashboard_btn = Dashboard
+manage_btn = Manage
+signout_btn = Sign out
+
 
