--- a/src/main/resources/translations/content_ks.properties
+++ b/src/main/resources/translations/content_ks.properties
@@ -1,3 +1,4 @@
+//login
 button.login.name = Kyqu
 forgot_password = Keni harruar fjalëkalimin?
 not_registered = Nuk jeni i regjistruar?
@@ -7,6 +8,18 @@ username = Përdoruesi
 password = Fjalëkalimi
 error_title = GABIM
 error_content = Përdoruesi/Fjalëkalimi i gabuar
+
+//sign up
 name_label = Emri
 lastname_label = Mbiemri
 alreadyHave = Jeni të regjistruar?
+
+//dashboard
+totalEmployed = Të punësuarit total:
+totalMaleEmployed = Të punësuarit meshkuj:
+totalFemaleEmployed = Të punësuaret femra:
+welcomeLabel = Mirë se vjen
+dashboard_btn = Fillimi
+manage_btn = Menaxho
+signout_btn = Dil
+
