Made the two language function in the manage section

--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -23,4 +23,17 @@ dashboard_btn = Dashboard
 manage_btn = Manage
 signout_btn = Sign out
 
+//manage
+kompania = Company
+titulli = Degree
+drejtimi = Major
+profesioni = Position
+gjinia = Gender
+shto = Add
+fshij = Delete
+perditeso = Update
+mashkull = Male
+femer = Female
+tjeter = Other
+
 
