--- a/src/main/resources/translations/content_ks.properties
+++ b/src/main/resources/translations/content_ks.properties
@@ -23,3 +23,16 @@ dashboard_btn = Fillimi
 manage_btn = Menaxho
 signout_btn = Dil
 
+//manage
+kompania = Kompania
+titulli = Titulli
+drejtimi = Drejtimi
+profesioni = Profesioni
+gjinia = Gjinia
+shto = Shto
+fshij = Fshij
+perditeso = Përditëso
+mashkull = Mashkull
+femer = Femër
+tjeter = Tjetër
+
