Added the statistics page

--- a/src/main/resources/translations/content_en.properties
+++ b/src/main/resources/translations/content_en.properties
@@ -36,4 +36,14 @@ mashkull = Male
 femer = Female
 tjeter = Other
 
+//statistics
+statistics = Statistics
+bachelor = Employed with Bachelor
+master = Employed with Master
+phd = Employed with PhD
+iks = Computer and Software Engineering
+ear = Electronics, Automation and Robotics
+tik = Communication and Information Technology
+elektro = Electro-engineering(BSc)
+
 
