--- a/src/main/resources/translations/content_ks.properties
+++ b/src/main/resources/translations/content_ks.properties
@@ -36,3 +36,13 @@ mashkull = Mashkull
 femer = Femër
 tjeter = Tjetër
 
+//statictics
+statistics = Statistikat
+bachelor = Të punësuarit me Baçelor
+master = Të punësuarit me Master
+phd = Të punësuarit me Doktoraturë
+iks = Inxhinieri Kompjuterike dhe Softuerike
+ear = Elektronikë, Automatikë dhe Robotikë
+tik = Teknologjite e Informacionit dhe Komunikimit
+elektro = Elektroenergjetike(BSc)
+
